[project]
name = "llm-utils"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.75.0",
    "datetime>=5.5",
    "ipykernel>=6.29.5",
    "openai>=1.95.1",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
